--- a/ap0302.html
+++ b/ap0302.html
@@ -9,7 +9,7 @@
 		</style>
 	</head>
 	<body>
-		<div>G384002023 拓殖太郎</div>
+		<div>G384562023 田熊玄太</div>
 		<div id="WebGL-output"></div>
 		<script type="importmap"> {
 			"imports" : {
